fix: Dropdown load time visibility bug resolved

--- a/src/components/AccountDropdown/AccountDropdown.css
+++ b/src/components/AccountDropdown/AccountDropdown.css
@@ -12,6 +12,10 @@
   border: 1px solid rgb(61, 61, 61);
 }
 
+#hideDropdown {
+  opacity: 0;
+}
+
 #appear {
   animation: fadeIn 0.2s;
 }
